--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+pnpm-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -42,6 +43,7 @@ node_modules/
 dist/
 build/
 jspm_packages/
+.DS_Store
 
 # TypeScript v1 declaration files
 typings/
@@ -104,3 +106,19 @@ dist
 
 # TernJS port file
 .tern-port
+
+# local env files
+.env.local
+.env.*.local
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+package.json
+package-lock.json
+tsconfig.json
