--- a/server-side/package.json
+++ b/server-side/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.7.3"
+    "eslint": "^8.18.0",
+    "typescript": "4.7.3"
   },
   "dependencies": {
     "concurrently": "^7.2.2",
